# Alaz

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  alaz.service  deploy.sh  docker-compose.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/alaz-auth/: Cargo.toml
crates/alaz-auth/src/: apikey.rs  jwt.rs  lib.rs  middleware.rs  password.rs  vault.rs
crates/alaz-cli/: Cargo.toml
crates/alaz-cli/src/: generate.rs  main.rs
crates/alaz-core/: Cargo.toml
crates/alaz-core/src/: circuit_breaker.rs  config.rs  error.rs  lib.rs  math.rs  stats.rs  tokens.rs  traits.rs
crates/alaz-core/src/models/: auth.rs  code.rs  core_memory.rs  episode.rs  git.rs  graph.rs  knowledge.rs  mod.rs  procedure.rs  project.rs  raptor.rs  reflection.rs  session.rs  signal_weight.rs  vault.rs
crates/alaz-db/: Cargo.toml
crates/alaz-db/src/: embedding_reset.rs  lib.rs  pool.rs
crates/alaz-db/src/migrations/: 000_migration_tracking.sql  001_initial.sql  002_vault.sql  003_dedup_indexes.sql  004_memory_decay.sql  005_search_feedback.sql  006_enhanced_features.sql  007_source_tracking.sql  008_simple_fts.sql  009_wilson_score.sql  010_episode_enrichment.sql  011_pattern_usage.sql  012_signal_weights.sql  013_search_explanations.sql  014_git_activity.sql  015_code_symbols.sql  016_spaced_repetition.sql  017_context_tracking.sql  018_learning_analytics.sql  019_search_feedback_index.sql  020_session_search.sql  021_learning_queue.sql  022_paks_features.sql  023_observability.sql
crates/alaz-db/src/repos/: apikey.rs  audit.rs  code_symbol.rs  context_tracking.rs  core_memory.rs  device.rs  episode.rs  git_activity.rs  graph.rs  knowledge.rs  learning_queue.rs  learning_run.rs  mod.rs  observability.rs  owner.rs  procedure.rs  project.rs  raptor.rs  reflection.rs  search_query.rs  session.rs  session_message.rs  signal_weight.rs  vault.rs  work_unit.rs
crates/alaz-db/tests/: integration.rs
crates/alaz-graph/: Cargo.toml
crates/alaz-graph/src/: causal.rs  clustering.rs  decay.rs  lib.rs  promotion.rs  scoring.rs  traversal.rs
crates/alaz-intel/: Cargo.toml
crates/alaz-intel/src/: chunking.rs  code_index.rs  colbert.rs  compact.rs  consolidation.rs  context.rs  contradiction.rs  domain.rs  embeddings.rs  evolution.rs  git_ingest.rs  health.rs  health_score.rs  hyde.rs  ingest.rs  lib.rs  llm.rs  optimizer.rs  query_expansion.rs  raptor.rs  reflection.rs  session_state.rs  tool_mining.rs
crates/alaz-intel/src/learner/: dedup.rs  entities.rs  extraction.rs  mod.rs  outcomes.rs  persist.rs
crates/alaz-search/: Cargo.toml
crates/alaz-search/src/: agentic.rs  cache.rs  classifier.rs  decay.rs  fusion.rs  lib.rs  pipeline.rs  proactive.rs  rerank.rs  weight_learning.rs
crates/alaz-search/src/signals/: colbert.rs  cue.rs  dense_text.rs  fts.rs  graph.rs  mod.rs  raptor.rs
crates/alaz-server/: Cargo.toml
crates/alaz-server/src/: error.rs  jobs.rs  lib.rs  log_capture.rs  metrics.rs  middleware.rs  rate_limit.rs  router.rs  state.rs
crates/alaz-server/src/api/: code.rs  context.rs  episodic.rs  git.rs  graph.rs  ingest.rs  knowledge.rs  learn.rs  mod.rs  project.rs  search.rs  session.rs  system.rs  tags.rs  vault.rs
crates/alaz-server/src/mcp/: helpers.rs  mod.rs  params.rs
crates/alaz-server/src/mcp/handlers/: database.rs  episodic.rs  git.rs  graph.rs  knowledge.rs  mod.rs  observability.rs  search.rs  session.rs  system.rs  vault.rs
crates/alaz-vector/: Cargo.toml
crates/alaz-vector/src/: client.rs  colbert.rs  dense.rs  lib.rs
docs/: API.md  ARCHITECTURE.md  IMPROVEMENT_PLAN.md  ROADMAP.md
docs/superpowers/plans/: 2026-03-22-alaz-implementation.md
docs/superpowers/specs/: 2026-03-22-alaz-design.md
scripts/: backup.sh  post-commit-hook.sh
services/colbert-server/: Dockerfile  main.py  requirements.txt
