[workspace]
resolver = "2"
members = [
    "crates/alaz-core",
    "crates/alaz-db",
    "crates/alaz-vector",
    "crates/alaz-intel",
    "crates/alaz-graph",
    "crates/alaz-search",
    "crates/alaz-auth",
    "crates/alaz-server",
    "crates/alaz-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["nonantiy <nonantiy1@gmail.com>"]
description = "Long-term memory for AI coding agents"
repository = "https://github.com/Nonanti/Alaz"
homepage = "https://github.com/Nonanti/Alaz"
keywords = ["ai", "mcp", "knowledge-graph", "search", "memory"]
categories = ["command-line-utilities", "database", "development-tools"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
qdrant-client = "1"
rmcp = { version = "1", features = ["server", "transport-streamable-http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
clap = { version = "4", features = ["derive"] }
jsonwebtoken = "9"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
cuid2 = "0.1"
dotenvy = "0.15"
futures = "0.3"
scraper = "0.22"
ego-tree = "0.10"

alaz-core = { version = "1.0.0", path = "crates/alaz-core" }
alaz-db = { version = "1.0.0", path = "crates/alaz-db" }
alaz-vector = { version = "1.0.0", path = "crates/alaz-vector" }
alaz-intel = { version = "1.0.0", path = "crates/alaz-intel" }
alaz-graph = { version = "1.0.0", path = "crates/alaz-graph" }
alaz-search = { version = "1.0.0", path = "crates/alaz-search" }
alaz-auth = { version = "1.0.0", path = "crates/alaz-auth" }
alaz-server = { version = "1.0.0", path = "crates/alaz-server" }
