[package]
name = "alaz-auth"
version.workspace = true
edition.workspace = true

[dependencies]
alaz-core.workspace = true
alaz-db.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
axum.workspace = true
tracing.workspace = true
