[package]
name = "alaz-db"
version.workspace = true
edition.workspace = true

[dependencies]
alaz-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
cuid2.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
