[package]
name = "alaz-search"
version.workspace = true
edition.workspace = true

[dependencies]
alaz-core.workspace = true
alaz-db.workspace = true
alaz-vector.workspace = true
alaz-intel.workspace = true
alaz-graph.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sqlx.workspace = true
