[package]
name = "alaz-server"
version.workspace = true
edition.workspace = true

[dependencies]
alaz-core.workspace = true
alaz-db.workspace = true
alaz-vector.workspace = true
alaz-intel.workspace = true
alaz-graph.workspace = true
alaz-search.workspace = true
alaz-auth.workspace = true
axum.workspace = true
tower-http.workspace = true
rmcp.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["registry"] }
sha2 = "0.10"
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
reqwest.workspace = true
schemars.workspace = true
dashmap = "6"
chrono.workspace = true
uuid.workspace = true
cuid2.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
